Fixed display on small desktop (pie and bar)

--- a/assets/4_styles_large_desktop.css
+++ b/assets/4_styles_large_desktop.css
@@ -72,6 +72,25 @@
     ---------------------------------- FIRST OUTPUT ----------------------------------------
     */
 
+    /*.two-graphs-box {*/
+    /*    flex-grow: 1;*/
+    /*}*/
+
+    .one-of-two-graphs {
+        width: calc((50%) - (10px));
+    }
+
+    .one-of-two-graphs:first-of-type {
+        margin-right: 20px;
+        margin-bottom: 0;
+    }
+
+    .one-of-two-graphs:last-of-type {
+        padding-right: 0;
+        padding-left: 0;
+        /*margin-bottom: 0;*/
+    }
+
     .pie-graph {
         margin-top: 100px;
     }
